# microimpute

./: .buildinfo  CHANGELOG.md  CLAUDE.md  README.md  changelog.yaml  changelog_entry.yaml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: main.yml  pr.yaml  versioning.yaml
_sources/autoimpute/: autoimpute.ipynb
_sources/examples/scf_to_cps/: imputing-from-scf-to-cps.md
autoimpute/: index.html
docs/models/matching/: matching-imputation.ipynb
docs/models/qrf/: index.md  qrf-imputation.ipynb
examples/scf_to_cps/: imputing-from-scf-to-cps.html  index.html
imputation-benchmarking/: imputing-across-surveys.html  index.html
microimpute/models/: qrf.py
models/imputer/: implement-new-model.html  index.html
models/matching/: index.html
models/ols/: index.html
models/qrf/: index.html
models/quantreg/: index.html
tests/test_models/: test_qrf.py  test_qrf_extended.py
