[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "microimpute"
version = "0.2.4"
description = "Benchmarking imputation methods for microdata"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "plotly>=5.24.0,<6.0.0",
    "kaleido>=0.2.1,<0.3.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "scipy>=1.11.0,<1.15.0",
    "requests>=2.32.0,<3.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "statsmodels>=0.14.0,<0.15.0",
    "quantile-forest>=1.4.0,<1.5.0",
    "pydantic>=2.8.0,<3.0.0",
    "optuna==4.3.0",
    "joblib>=1.2.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "flake8>=6.0.0,<7.0.0",
    "black>=23.0.0",
    "isort>=5.9.0,<6.0.0",
    "mypy>=1.0.0,<2.0.0",
    "build>=1.0.0,<2.0.0",
    "linecheck>=0.1.0,<0.2.4",
]

matching = [
    "rpy2>=3.5.0,<4.0.0",
]

docs = [
    "jupyter-book>=1.0.0",
    "ipywidgets>=8.0.0,<9.0.0",  # For notebook interactivity
    "plotly>=5.24.0,<6.0.0",      # For visualization in notebooks
    "h5py>=3.1.0,<4.0.0",         # For data file support
]

[tool.setuptools]
packages = ["microimpute"]
include-package-data = true

[tool.setuptools.package-data]
"microimpute" = ["**/*"]


[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ["py311", "py312", "py313"]
