[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "microimpute"
version = "0.2.5"
description = "Benchmarking imputation methods for microdata"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=2.0.0,<3.0.0",  # Update to NumPy 2.x
    "pandas>=2.2.0,<3.0.0",  # Keep current (3.0 not released yet)
    "plotly>=5.24.0,<6.0.0",  # Keep current
    "scikit-learn>=1.6.1,<2.0.0",  # Keep current
    "scipy>=1.16.0,<1.17.0",  # Update to latest 1.16.x
    "requests>=2.32.0,<3.0.0",  # Keep current
    "tqdm>=4.65.0,<5.0.0",  # Keep current
    "statsmodels>=0.14.0,<0.16.0",  # Allow 0.15.x when released
    "quantile-forest>=1.4.0,<1.5.0",  # Keep current
    "pydantic>=2.8.0,<3.0.0",  # Keep current
    "optuna>=4.3.0,<5.0.0",  # Update to allow newer versions
    "joblib>=1.5.0,<2.0.0",  # Update to latest 1.5.x
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",  # Keep current
    "pytest-cov>=6.0.0,<7.0.0",  # Keep current
    "flake8>=7.0.0,<8.0.0",  # Update to 7.x
    "black>=24.0.0",  # Update to latest
    "isort>=5.13.0,<6.0.0",  # Update to latest 5.x
    "mypy>=1.0.0,<2.0.0",  # Keep current
    "build>=1.0.0,<2.0.0",  # Keep current
    "linecheck>=0.1.0,<0.3.0",  # Allow newer versions
]

matching = [
    "rpy2>=3.5.0,<4.0.0",
]

docs = [
    "jupyter-book>=1.0.0",
    "ipywidgets>=8.0.0,<9.0.0",  # For notebook interactivity
    "plotly>=5.24.0,<6.0.0",      # For visualization in notebooks
    "h5py>=3.1.0,<4.0.0",         # For data file support
]

images = [
    "kaleido>=0.2.1,<0.3.0",  # For exporting plots as PNG/JPG
]

[tool.setuptools]
packages = ["microimpute"]
include-package-data = true

[tool.setuptools.package-data]
"microimpute" = ["**/*"]


[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ["py313"]